[project]
name = "nuitka-gui"
version = "0.1.0"
description = "Flet-based GUI for generating and running Nuitka build commands."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["nuitka", "flet", "gui", "build"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "flet[all,desktop]>=0.85.1",
    "nuitka>=4.1",
    "ruff>=0.15.14",
    "requests>=2.31.0,<3",
    "pip>=26.1.1",
]
