[project]
name = "nuitka-gui"
version = "0.1.1"
description = "Flet-based GUI for generating and running Nuitka build commands."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
keywords = ["nuitka", "flet", "gui", "build"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "flet[desktop]>=0.85.1",
    "nuitka>=4.1",
]


[project.urls]
Repository = "https://github.com/SioComb/Nuitka-GUI"
Issues = "https://github.com/SioComb/Nuitka-GUI/issues"

[tool.flet]
product = "nuitka-gui"
company = ""
copyright = "Copyright (C) 2026 by SioComb"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
src = ["."]
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501", # formatter handles line wrapping where it can
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["main"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"main.py" = [
    "B008", # Flet controls are intentionally constructed at declaration sites.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "native"
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "black>=24.1.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false
